--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@capacitor/preferences": "4.0.2",
     "@capacitor/splash-screen": "^4.1.3",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/cli": "6.20.8",
+    "@ionic/cli": "^6.20.8",
     "@ionic/react": "6.5.1",
     "@ionic/react-router": "6.5.1",
     "@progress/kendo-file-saver": "^1.1.1",
